--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "groupId":"org.cbioportal.cgds",
   "artifactId":"JavaClient",
   "artifactVersion":"1.0.0",
-  "modelPackage":"org.cbioportal.cgds.client.api",
-  "apiPackage":"org.cbioportal.cgds.client.model",
+  "modelPackage":"org.cbioportal.cgds.client.model",
+  "apiPackage":"org.cbioportal.cgds.client.api",
   "invokerPackage":"org.cbioportal.cgds.client"
 }
